top iage fix on mobile

--- a/wp-content/themes/opposition/sass/_mq.scss
+++ b/wp-content/themes/opposition/sass/_mq.scss
@@ -16,17 +16,26 @@
 
 /* Custom, iPhone Retina */
 @media only screen and (min-width : 320px) {
-
+    #intro video{
+        display:none;
+    }
 }
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width : 480px) {
-
+    #intro video{
+        display:none;
+    }
 }
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
-
+    #intro video{
+        display:block;
+    }
+    #intro .interiorheader-mobile{
+        display:none;
+    }
 }
 
 /* Medium Devices, Desktops */
