--- a/wp-content/themes/opposition/sass/opposition.scss
+++ b/wp-content/themes/opposition/sass/opposition.scss
@@ -86,6 +86,17 @@ h1{
     height: 400px;
     width:100%;
 }
+.interiorheader-mobile{
+    background:url(../img/img-star_mini.jpg) center top no-repeat;
+    position: absolute;
+    top:0;
+    left: 50%;
+    z-index: -100;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    height: 400px;
+    width:100%;
+}
 #bgvid{
     position: absolute;
     top:0px;
@@ -385,5 +396,5 @@ footer{
 #fourohfour{
     text-align:center;
 }
-
+@import '_mq';
 // @import '_shop';
